--- a/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
+++ b/src/app/modules/dashboard/pages/overview-latam/overview-latam.component.html
@@ -63,19 +63,19 @@
                     <ul class="nav nav-pills nav-fill">
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 1}"
-                                (click)="getDataByUsersInvOrAup('users-vs-conversions')">
+                                (click)="getDataByUsersInvOrAup('users-vs-conversions', selectedSectorsTab, selectedCategoriesTab, selectedSourcesTab)">
                                 {{ 'general.usersVsSales' | translate }}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 2}"
-                                (click)="getDataByUsersInvOrAup('investment-vs-revenue')">
+                                (click)="getDataByUsersInvOrAup('investment-vs-revenue', selectedSectorsTab, selectedCategoriesTab, selectedSourcesTab)">
                                 {{ 'general.investmentVsRevenue' | translate }}
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link p-2" [ngClass]="{'active': selectedTab3 === 3}"
-                                (click)="getDataByUsersInvOrAup('aup-vs-revenue')">
+                                (click)="getDataByUsersInvOrAup('aup-vs-revenue',selectedSectorsTab, selectedCategoriesTab, selectedSourcesTab)">
                                 {{ 'general.revenueVsAup' | translate }}
                             </a>
                         </li>
